[package]
name = "dns-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.17"
regex = "1.6.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
surf = "2.3.2"
tokio = { version = "1.20.0", features = ["full"] }
toml = "0.5.9"
